--- a/Squadfree/Squadfree/login.html
+++ b/Squadfree/Squadfree/login.html
@@ -32,7 +32,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            background-color: #EEEEEE;
+            background-color: #ffffff;
         }
 
         /* Form styling (from Uiverse.io by JohnnyCSilva) */
