9bl lupdat al9lawi

--- a/Squadfree/Squadfree/index.html
+++ b/Squadfree/Squadfree/index.html
@@ -71,8 +71,8 @@
           </li> 
           <li><a href="#contact">Contact</a></li>
           <!-- the login and sing up element  -->
-          <li><a>login</a></li>
-          <li><a>sing in</a></li>
+          <li class="login"><a href="./login.html">login</a></li>
+          <li class="sing_in "><a href="./signUp.html">sing in</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
