--- a/Squadfree/Squadfree/login.html
+++ b/Squadfree/Squadfree/login.html
@@ -11,7 +11,11 @@
             padding: 0;
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
         }
+        .image_right{
+            width: 100%;
+            height: 100%;
 
+        }
         /* Split the screen into two halves */
         .split-screen {
             display: flex;
@@ -171,7 +175,7 @@
     <div class="split-screen">
         <!-- Left half - Image -->
         <div class="left-half">
-            <img src="./assets/img/test.jpeg" width="100%" height="100%">
+            <img class="image_right" src="./assets/img/test.jpeg" width="100%" height="100%">
         </div>
 
         <!-- Right half - Login Form -->
