--- a/Squadfree/Squadfree/index.html
+++ b/Squadfree/Squadfree/index.html
@@ -277,7 +277,8 @@
 
       <!-- the produyct container  -->
       <div class="container">
-        <div class="isotope-layout" data-default-filter="*" data-layout="masonry" data-sort="original-order">
+        <div class="portfolio-scrollable-container">
+          <div class="isotope-layout" data-default-filter="*" data-layout="masonry" data-sort="original-order">
             <ul class="portfolio-filters isotope-filters" data-aos="fade-up" data-aos-delay="100">
                 <li data-filter="*" class="filter-active">All</li>
                 <li data-filter=".europe">A</li>
@@ -395,10 +396,12 @@
     
             <!-- Button to show more items -->
             <div class="text-center mt-4">
-                <button id="showMoreBtn" class="btn btn-primary">Show More</button>
+                <button id="showMoreBtn" class="showMoreBtn">&#129158;</button>
             </div>
         </div>
     </div>
+        </div>
+        
       <!-- ########################################################################################################################################################### -->
 
     </section><!-- /Portfolio Section -->
